fixed button spacing

--- a/assets/css/stylemain.css
+++ b/assets/css/stylemain.css
@@ -111,11 +111,6 @@ nav .brand-logo {
 #btn-group{
     margin-bottom: 20px;
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-
 }
 
 .audio-player{
